# MindFlow

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  README.zh-CN.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py  settings.py
backend/app/api/: __init__.py  compositions.py  content_inputs.py  drafts.py
backend/app/db/: __init__.py  models.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 20260602_0001_initial_schema.py
backend/tests/: test_app.py  test_content_inputs_api.py  test_draft_composition_api.py  test_migrations.py  test_models.py  test_product_api.py  test_settings.py
docs/: progress.md  spec.md
docs/architecture/: autorepost-integration.md  postgresql-schema.md
docs/contracts/: sprint-02-development-standards.md  sprint-03-lightweight-reusable-modules.md  sprint-04-auth-module-decision-matrix.md  sprint-05-nextjs-supabase-auth-recipe.md  sprint-06-django-allauth-recipe.md  sprint-07-ai-workbench-ui-prototype.md  sprint-08-postgresql-schema-and-autorepost-boundary.md  sprint-09-backend-migrations.md  sprint-10-backend-product-apis.md  sprint-11-frontend-api-wiring.md  sprint-12-topic-persona-apis.md  sprint-13-topic-persona-frontend-wiring.md  sprint-14-backend-draft-composition.md  sprint-15-frontend-composition-wiring.md
docs/qa/: sprint-02-development-standards-report.md  sprint-03-lightweight-reusable-modules-report.md  sprint-09-backend-migrations-report.md  (+11 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check.sh
(+22 files in other folders)
