[project]
name = "mindflow-backend"
version = "0.1.0"
description = "Backend foundation for the MindFlow content workbench."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.110",
  "pydantic-settings>=2.0",
  "psycopg[binary]>=3.1",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
